complete 'Using Web APIs with Firebase' lesson.

--- a/src/app/rover-form/rover-form.component.html
+++ b/src/app/rover-form/rover-form.component.html
@@ -1,4 +1,5 @@
 <h1>Curiosity Images</h1>
+<a routerLink="user/photos">View Your Saved Photos</a>
 
 <form>
   <div class="form-group">
@@ -15,7 +16,8 @@
       <option  value="MAHLI">Mars Hand Lens Imager</option>
     </select>
   </div>
-  <button (click)="getRoverImages(roverDate.value, roverCamera.value)">Get Photos</button>
+  <button (click)="getRoverImages(roverDate.value, roverCamera.value)">View Images</button>
+  <button (click)="saveRoverImages(roverDate.value, roverCamera.value)">Save All Images</button>
 </form>
 
 <div *ngIf="photos && !noPhotos">
